Random palette created and saved Co-authored-by Jordan Williamson : <williansonjordan05@gmail.com> Co-authored-by Lydia Sims : <sims.lydia88@gmail.com> Co-authored-by Jarvis Bailey : <baileyjarvis2814@gmail.com> Co-authored-by Kyle Boomer: <kylemboomer@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <p class="color" id="color-4">#B6D7A8</p>
         <p class="color" id="color-5">#A4C4CA</p>
     </section>
-    
+    <section class="button-grid">
+        <button class="palettes" id="paletteButton">New Palette</button>
+      </section>
+      <script src="main.js"></script>
 </body>
 </html>
