Start From Scratch Save Palette Section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     </section>
     <section class="button-grid">
         <button class="palettes" id="paletteButton">New Palette</button>
-      </section>
-      <script src="main.js"></script>
+        <button class="savePalette" id="savePaletteButton">Save Palette</button>
+    </section>
+    <script src="main.js"></script>
 </body>
 </html>
