Current iteration 3 waiting for completion

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <p class="color" id="color-5">#A4C4CA</p>
       </section>
       <section class="button-grid">
-        <button class="palettes" id="paletteButton">New Palette</button>
-        <button class="savePalette" id="savePaletteButton">Save Palette</button>
+        <button class="paletteButtons" id="palette-Button">New Palette</button>
+        <button class="paletteButtons" id="save-Palette-Button">Save Palette</button>
       </section>
     </section>
     <section class="saved-palettes-section">
-      <header class="Header2"><h2> Saved Palette</h2></header>
+      <header class="Header2"><h2> Saved Palettes</h2></header>
+      <p class="paletteStatus" id="mini-palette">No saved palettes yet!</p>
     </section>
-
     <script src="main.js"></script>
 </body>
 </html>
